# jsonapi

./: .gitignore  README.md  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
jsonapi/models/: __init__.py  errors.py  links.py  meta.py  pagination.py  relationships.py  resource.py
jsonapi/route/: included.py
tests/: test_compound_document.py  test_document_links.py  test_jsonapi_object.py
